--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html>
   <head>
 		<!-- Paste the Google Fonts below this line -->
-		
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&display=swap" rel="stylesheet">
+
 		
 
 
